--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="box1"><p>--dark_orng</p><p>#e08302</p></div>
             <div class="box2"><p>--secondary</p><p>#307ee1</p></div>
-            <div class="box3"><p>--dark_bg</p><p>#307ee1</p></div>
+            <div class="box3"><p>--dark_bg</p><p>#2b3e4d</p></div>
             <div class="box4"><p>--black</p><p>#000</p></div>
         </div>
         <div><p> Text Color: var(--white_bg) - #fff</p></div>
