--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <button class="orangebttn">Contact us</button>
         </div>
     <h2>Banner</h2>
+    <h2>placeholder</h2>
+        dark bg transparencia de 75%
     <h2></h2>
     <h2></h2>
 
